[package]
name = "ents"
version = "0.1.0"
publish = false
authors = ["kuviman"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12"
rand = "0.8"
