[package]
name = "ents"
version = "0.1.0"
publish = false
authors = ["kuviman"]
edition = "2021"

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.12", features = [ "vorbis" ]}
noise = "0.8.2"
rand = "0.8"
